Fixed z-index video issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 75vw;
+
+  z-index: -1000;
 }
 
 main {
@@ -22,4 +24,5 @@ main {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 100;
 }
