--- a/src/features/about-me/boxing/boxing.scss
+++ b/src/features/about-me/boxing/boxing.scss
@@ -13,6 +13,8 @@
       border-radius: 10px;
       display: flex;
 
+      z-index: 0;
+
       img,
       video {
         width: 40vw;
